# TD-Game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
lib/: CMakeLists.txt
models/: Cube.mtl  Tower.mtl
resources/: enemy.json  tower.json
resources/enemies/: enemy_1.json  enemy_2.json  enemy_mesh.json
resources/levels/: _levels.json  develop.json  way.json
resources/towers/: shell_mesh.json  tower.json  tower_mesh.json
scripts/: script.lua
shaders/: grid.frag  grid.geom  grid.vert  simple.frag  simple.vert
src/: BattleManager.cpp  BattleManager.hpp  BattleObjects.cpp  BattleObjects.hpp  Camera.cpp  Camera.hpp  FS.hpp  FileSystem.hpp  GLSLProgram.cpp  GLSLProgram.hpp  Game.cpp  Game.hpp  ImageMager.cpp  ImageMager.hpp  Input.cpp  Input.hpp  Model.cpp  Model.hpp  ModelGL.cpp  ModelGL.hpp  ModelManager.cpp  ModelManager.hpp  Render.cpp  Render.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Settings.hpp  WindowGLFW.cpp  WindowGLFW.hpp  gl_core_4_3.cpp  gl_core_4_3.hpp  legacy.hpp
src/fs/: FileSystem.hpp
src/gameObjects/: BattleGrid.cpp  BattleGrid.hpp  BattleGridEntity.cpp  BattleGridEntity.hpp  Enemy.cpp  Enemy.hpp  EnemyEntity.cpp  EnemyEntity.hpp  EnemyQueue.cpp  EnemyQueue.hpp  EnemyWay.cpp  EnemyWay.hpp  Level.hpp  MeshGL.cpp  MeshGL.hpp  ShellEntity.cpp  ShellEntity.hpp  Tower.cpp  Tower.hpp  TowerEntity.cpp  TowerEntity.hpp  Way.cpp  Way.hpp
src/gl/: gl_core_4_3.cpp  gl_core_4_3.hpp
src/logicObjects/: EnemyProperty.cpp  EnemyProperty.hpp  ShellProperty.cpp  ShellProperty.hpp  TowerProperty.cpp  TowerProperty.hpp
src/managers/: BattleManager.cpp  BattleManager.hpp  GameManager.cpp  GameManager.hpp  ResourceManager.cpp  ResourceManager.hpp
src/renderObjects/: BattleGridMeshGl.cpp  BattleGridMeshGl.hpp  ElementsMeshGl.cpp  ElementsMeshGl.hpp  MeshGl.cpp  MeshGl.hpp
src/utils/: jsonify.hpp
tools/: meshes.py  spiral.py
